update blog title

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: beforeold's blog
+title: beforeold blog
 SEOTitle: beforeold 博客 | beforeold blog
 header-img: img/home-bg.jpg
 email: ibeforeold@gmail.com
 description: "这里是 beforeold 的个人博客，与你一起发现更大的世界 | 要做一个有 swag 的程序员"
 keyword: "beforeold, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
-url: "https://huangxuan.me" # your host, for absolute URL
+url: "https://beforeold.github.io" # your host, for absolute URL
 baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
